--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ plugins {
 
 group 'org.example'
 version '1.0-SNAPSHOT'
+apply plugin: 'java'
 
 repositories {
     mavenCentral()
@@ -19,3 +20,15 @@ dependencies {
 test {
     useJUnitPlatform()
 }
+//jar {
+//    manifest {
+//        attributes "Main-Class": "com.jenkinstest.Calculator"
+//    }
+//
+//    from {
+//        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+//    }
+//}
+//application {
+//    mainClassName = 'com.jenkinstest.Calculator'
+//}
