testing env jenkins

--- a/JenkinsFile
+++ b/JenkinsFile
@@ -14,7 +14,7 @@ pipeline {
     }
     post {
             always {
-                emailext body: 'Body of Test', subject: 'Test', to: 'pallab.netapp.test@gmail.com'
+                emailext body: $DEFAULT_CONTENT, subject: $DEFAULT_SUBJECT, to: 'pallab.netapp.test@gmail.com'
             }
         }
 
